RESOLVED FIXED43873
regression in generateMipmap
https://bugs.webkit.org/show_bug.cgi?id=43873
Summary regression in generateMipmap
Nick
Reported 2010-08-11 13:27:39 PDT
There are no textures in the demo at: https://cvs.khronos.org/svn/repos/registry/trunk/public/webgl/sdk/demos/mozilla/spore/index.html. It is confirmed that there are by looking at in in chrome/firefox.
Attachments
patch (14.23 KB, patch)
2010-08-12 14:08 PDT, Zhenyao Mo
dglazkov: review+
zmo: commit-queue-
Zhenyao Mo
Comment 1 2010-08-12 11:01:20 PDT
It should be a recent regression. My build from this Monday still shows the texture.
Zhenyao Mo
Comment 2 2010-08-12 13:26:27 PDT
I am looking into this.
Zhenyao Mo
Comment 3 2010-08-12 13:31:43 PDT
Ok, it's a bug in the NPOT/Texture completeness patch, so it is before this Monday's build. I was fixing it on Monday; that's why my Monday's build shows the texture correctly. Only I got distracted with other bugs, so I haven't committed the fix. Will upload a patch shortly after.
Zhenyao Mo
Comment 4 2010-08-12 14:03:14 PDT
After generateMipmap() on a POT texture, it should draw successfully with the texture.
Zhenyao Mo
Comment 5 2010-08-12 14:08:59 PDT
Created attachment 64258 [details] patch test is in sync with khronos conformance test, except one failing case. Commented out that failing case for now.
Kenneth Russell
Comment 6 2010-08-12 15:39:31 PDT
Comment on attachment 64258 [details] patch Looks good to me.
Dimitri Glazkov (Google)
Comment 7 2010-08-12 15:51:51 PDT
Comment on attachment 64258 [details] patch ok.
Zhenyao Mo
Comment 8 2010-08-12 15:59:47 PDT
Note You need to log in before you can comment on or make changes to this bug.