2010-08-12  Zhenyao Mo  <zmo@google.com>

Reviewed by Dimitri Glazkov.

        regression in generateMipmap
        https://bugs.webkit.org/show_bug.cgi?id=43873

        * html/canvas/WebGLTexture.cpp:
        (WebCore::WebGLTexture::generateMipmapLevelInfo): should set m_needToUseBlackTexture to false if generateMipmapLevelInfo runs through successfully.
2010-08-12  Zhenyao Mo  <zmo@google.com>

        Reviewed by Dimitri Glazkov.

        regression in generateMipmap
        https://bugs.webkit.org/show_bug.cgi?id=43873

        * fast/canvas/webgl/texture-npot-expected.txt: Add more test cases on NPOT/POT texture behaviors.
        * fast/canvas/webgl/texture-npot.html: Ditto.


Canonical link: https://commits.webkit.org/56077@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@65277 268f45cc-cd09-0410-ab3c-d52691b4dbfc